--- a/css/style.scss
+++ b/css/style.scss
@@ -36,6 +36,23 @@ section{
             width: 300px;
             margin: 4px;
             position: relative;
+            .pHover{
+                position: absolute;
+                top: 0;
+                left: 0;
+                height: 100%;
+                width: 100%;
+                transition: opacity 1s ease;
+                background: #4bfa0068;
+                // display: none;
+                opacity: 0;
+                p{
+                    font-size: 40px;
+                    color: greenyellow;
+                    transform: translate(30%,300%);
+                }
+            }
+           
             img{
                 width: 100%;
                 height: 60%;
@@ -83,6 +100,10 @@ section{
         .itemBox:hover{
             background: #eee;
             box-shadow: 10px 10px 20px black;
+        }
+        .itemBox:hover .pHover{
+            // display: block;
+            opacity: 1;
         }
     }
     
